# EGO-Planner-v2

./: .gitignore  README.md
swarm-playground/: [README]_Addtional_Instructions_for_Ubuntu22.md
swarm-playground/formation_ws/src/Utils/manual_take_over/src/: manual_take_over.cpp
swarm-playground/formation_ws/src/Utils/odom_visualization/src/: odom_visualization.cpp
swarm-playground/formation_ws/src/Utils/quadrotor_msgs/: CMakeLists.txt
swarm-playground/formation_ws/src/Utils/rviz_plugins/: CMakeLists.txt
swarm-playground/formation_ws/src/planner/plan_manage/: package.xml
swarm-playground/formation_ws/src/planner/plan_manage/launch/: advanced_param.xml  default.rviz  formation.launch  run_in_sim.launch  simulator.xml
swarm-playground/formation_ws/src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
swarm-playground/formation_ws/src/planner/swarm_bridge/: CMakeLists.txt  package.xml
swarm-playground/formation_ws/src/planner/swarm_bridge/launch/: bridge_tcp_station.launch  bridge_udp.launch
swarm-playground/formation_ws/src/planner/swarm_bridge/src/: bridge_node_udp.cpp
swarm-playground/formation_ws/src/planner/traj_opt/src/: poly_traj_optimizer.cpp
swarm-playground/formation_ws/src/planner/traj_utils/src/: planning_visualization.cpp
swarm-playground/formation_ws/src/uav_simulator/local_sensing/: CMakeLists.txt
swarm-playground/formation_ws/src/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
swarm-playground/interlaced_flight_ws/src/: CMakeLists.txt  run.sh
swarm-playground/interlaced_flight_ws/src/Utils/assign_goals/launch/: launch_gen.py  random_goals.launch
swarm-playground/interlaced_flight_ws/src/Utils/manual_take_over/: CMakeLists.txt
swarm-playground/interlaced_flight_ws/src/Utils/manual_take_over/src/: ground_station.cpp
swarm-playground/interlaced_flight_ws/src/Utils/odom_visualization/src/: odom_visualization.cpp
swarm-playground/interlaced_flight_ws/src/Utils/pose_utils/src/: pose_utils.cpp
swarm-playground/interlaced_flight_ws/src/Utils/random_goals/: CMakeLists.txt
swarm-playground/interlaced_flight_ws/src/Utils/random_goals/launch/: launch_gen.py  random_goals.launch
swarm-playground/interlaced_flight_ws/src/Utils/random_goals/src/: random_goals_node.cpp
swarm-playground/interlaced_flight_ws/src/Utils/selected_points_publisher-master/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
swarm-playground/interlaced_flight_ws/src/Utils/selected_points_publisher-master/include/selected_points_publisher/: selected_points_publisher.hpp
swarm-playground/interlaced_flight_ws/src/Utils/selected_points_publisher-master/src/: selected_points_publisher.cpp
swarm-playground/interlaced_flight_ws/src/planner/path_searching/src/: dyn_a_star.cpp
swarm-playground/interlaced_flight_ws/src/planner/plan_env/src/: grid_map.cpp
swarm-playground/interlaced_flight_ws/src/planner/plan_manage/: CMakeLists.txt  package.xml
swarm-playground/interlaced_flight_ws/src/planner/plan_manage/launch/: advanced_param.xml  default.rviz  run_in_sim.launch  wait_for_goals.launch
swarm-playground/interlaced_flight_ws/src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
swarm-playground/interlaced_flight_ws/src/planner/swarm_bridge/: CMakeLists.txt
swarm-playground/interlaced_flight_ws/src/planner/swarm_bridge/src/: traj2odom_node.cpp
swarm-playground/interlaced_flight_ws/src/planner/traj_opt/src/: poly_traj_optimizer.cpp
swarm-playground/interlaced_flight_ws/src/planner/traj_utils/: CMakeLists.txt
swarm-playground/interlaced_flight_ws/src/planner/traj_utils/include/traj_utils/: plan_container.hpp
swarm-playground/interlaced_flight_ws/src/planner/traj_utils/msg/: PolyTraj.msg
swarm-playground/interlaced_flight_ws/src/uav_simulator/local_sensing/src/: pointcloud_render_node.cpp
swarm-playground/interlaced_flight_ws/src/uav_simulator/map_generator/src/: random_forest_sensing.cpp
swarm-playground/interlaced_flight_ws/src/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
swarm-playground/main_ws/src/: run.sh
swarm-playground/main_ws/src/Utils/assign_goals/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/Utils/assign_goals/src/: assign_goals_node.cpp
swarm-playground/main_ws/src/Utils/moving_obstacles/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/Utils/moving_obstacles/launch/: obstacle_run.launch  second_joystick.launch  third_joystick.launch
swarm-playground/main_ws/src/Utils/moving_obstacles/src/: moving_obstacles.cpp
swarm-playground/main_ws/src/Utils/pose_utils/: CMakeLists.txt
swarm-playground/main_ws/src/Utils/random_goals/: package.xml
swarm-playground/main_ws/src/Utils/rviz_plugins/: CMakeLists.txt
swarm-playground/main_ws/src/Utils/selected_points_publisher/: CMakeLists.txt  package.xml
swarm-playground/main_ws/src/Utils/selected_points_publisher/src/: selected_points_publisher.cpp
swarm-playground/main_ws/src/planner/drone_detect/: README.md
swarm-playground/main_ws/src/planner/plan_env/: CMakeLists.txt
swarm-playground/main_ws/src/planner/plan_env/src/: grid_map.cpp  (+2 more)
swarm-playground/main_ws/src/planner/traj_utils/: package.xml
swarm-playground/main_ws/src/uav_simulator/so3_control/: CMakeLists.txt
swarm-playground/tracking_ws/src/Utils/fake_object/: CMakeLists.txt  fake_object.py  package.xml
swarm-playground/tracking_ws/src/Utils/fake_object/launch/: object_run.launch
swarm-playground/tracking_ws/src/Utils/fake_object/src/: fake_object.cpp
swarm-playground/tracking_ws/src/Utils/manual_take_over/: package.xml
swarm-playground/tracking_ws/src/Utils/odom_visualization/: CMakeLists.txt
swarm-playground/tracking_ws/src/Utils/uav_utils/: CMakeLists.txt
swarm-playground/tracking_ws/src/planner/traj_opt/: CMakeLists.txt  package.xml
swarm-playground/tracking_ws/src/uav_simulator/local_sensing/: CMakeLists.txt
swarm-playground/tracking_ws/src/uav_simulator/local_sensing/src/: pointcloud_render_node.cpp
swarm-playground/tracking_ws/src/uav_simulator/mockamap/: CMakeLists.txt
(+78 files in other folders)
